--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,106 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&family=Roboto:wght@100;300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;800&family=Roboto:wght@100;300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100&display=swap');
+
+*{
+ 
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.blink{
+  width:50%;
+  height:80px;
+  border-radius: 40rem;
+  animation: blink 4s infinite;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color:white;
+}
+.normal{
+  width:40%;
+  height: 80px;
+  background-color:#4CAF50 ;
+  border-radius: 40rem;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  color: white;
+  
+}
+@keyframes blink{
+  0% {
+    background: red;
+  }
+  20% {
+    background: white;
+  }
+  40% {
+    background: red;
+  }
+  60% {
+    background: white;
+  }
+  80% {
+    background: red;
+  }
+  100% {
+    background: white;
+  }
+}
+
+
+.btn{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius:20px ;
+  height:40px;
+  width:200px;
+}
+.btn:hover{
+  background-color: #223f22; /* Green */
+  border: none;
+  color: white;
+  padding: 1rems;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius:20px ;
+  height:40px;
+  width:200px;
+
+}  
+.normal-style{
+  width:300px;
+  height: 100px;
+  background-color: white;
+  border-radius: 40rem;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0.5rem;
+}
+.comp{
+  width: 100%;
+  display: flex;
+  flex-direction:row;
+  align-items: center;
+  margin:1rem;
+
 }
